# esp32_ota

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  esp32_ota.code-workspace  part_table.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c  project_specific.h
